# sim-avionics-bridge

./: .gitignore  CMakeLists.txt  FSAvionicsBridge.cpp  Makefile  Network.h  README.md  Utilities.cpp  Utilities.h  XPAvionicsBridgeMac.xpl  XPAvionicsBridgeWin.xpl
libs/: CMakeLists.txt
libs/Common/: CMakeLists.txt  Network.cpp
libs/FSAvionicsBridge/: CMakeLists.txt  FSFlightData.cpp  FSFlightData.h
libs/XPAvionicsBridge/: CMakeLists.txt  XPAvionicsBridge.cpp
sim-avionics-bridge.xcodeproj/: project.pbxproj
sim-avionics-bridge.xcodeproj/project.xcworkspace/xcuserdata/jcnc.xcuserdatad/: UserInterfaceState.xcuserstate
sim-avionics-bridge.xcodeproj/xcuserdata/jcnc.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
sim-avionics-bridge.xcodeproj/xcuserdata/jcnc.xcuserdatad/xcschemes/: xcschememanagement.plist
